# libbot2

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README  README.md  setup.cfg
.github/: dependabot.yml
bot2-core/: CMakeLists.txt  CPPLINT.cfg  Doxyfile  README  README.md
bot2-core/cmake/: bot2-core-config.cmake.in  lcmtypes.cmake  pods.cmake
bot2-core/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake  FindM.cmake
bot2-core/java/: CMakeLists.txt
bot2-core/lcmtypes/: bot_core_image_metadata_t.lcm  bot_core_image_sync_t.lcm  bot_core_image_t.lcm  bot_core_planar_lidar_t.lcm  bot_core_pose_t.lcm  bot_core_raw_t.lcm  bot_core_rigid_transform_t.lcm  bot_core_sensor_status_t.lcm
bot2-core/src/bot_core/: CMakeLists.txt  bot_core.h  camtrans.c  camtrans.h  circular.c  circular.h  color_util.c  color_util.h  ctrans.c  ctrans.h  fasttrig.c  fasttrig.h  fileutils.c  fileutils.h  glib_util.c  glib_util.h  gps_linearize.c  gps_linearize.h  lcm_util.c  lcm_util.h  math_util.h  minheap.c  minheap.h  ppm.c  ppm.h  ptr_circular.c  ptr_circular.h  rand_util.c  rand_util.h  ringbuf.c  ringbuf.h  rotations.c  rotations.h  serial.c  serial.h  set.c  set.h  signal_pipe.c  signal_pipe.h  small_linalg.c  (+11 more)
bot2-frames/: CMakeLists.txt  CPPLINT.cfg  README  README.md
bot2-frames/cmake/: bot2-frames-config.cmake.in  lcmtypes.cmake  pods.cmake
bot2-frames/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake  FindM.cmake
bot2-frames/lcmtypes/: bot_frames_update_t.lcm
bot2-frames/src/: CMakeLists.txt  bot_frames.c  bot_frames.h
bot2-frames/src/renderer/: CMakeLists.txt  articulated_body_renderer.c  bot_frames_renderers.h  coord_frames_renderer.c  frame_modifier_renderer.c  test_viewer.c
bot2-frames/src/test/: CMakeLists.txt  coord_frames_test.c  test_params.cfg
bot2-lcm-utils/: CMakeLists.txt  CPPLINT.cfg  README  README.md  bot-spy.sh.in
bot2-lcm-utils/cmake/: bot2-lcm-utils-config.cmake.in  lcmtypes.cmake  pods.cmake
bot2-lcm-utils/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake  FindM.cmake
bot2-lcm-utils/lcmtypes/: lcm_tunnel_disconnect_msg_t.lcm  lcm_tunnel_params_t.lcm  lcm_tunnel_sub_msg_t.lcm  lcm_tunnel_udp_msg_t.lcm
bot2-lcm-utils/python/: CMakeLists.txt  bot-log2mat.in
bot2-lcm-utils/src/logfilter/: CMakeLists.txt  lcm-logfilter.c
bot2-lcm-utils/src/logsplice/: CMakeLists.txt  lcm-logsplice.c
bot2-lcm-utils/src/tunnel/: CMakeLists.txt  introspect.c  introspect.h  lcm_tunnel.cpp  lcm_tunnel.h  lcm_tunnel_disconnect_msg_t.c  lcm_tunnel_disconnect_msg_t.h  lcm_tunnel_params_t.c  lcm_tunnel_params_t.h  lcm_tunnel_server.cpp  lcm_tunnel_server.h  lcm_tunnel_sub_msg_t.c  lcm_tunnel_sub_msg_t.h  lcm_tunnel_udp_msg_t.c  lcm_tunnel_udp_msg_t.h  lcm_util.c  lcm_util.h  signal_pipe.c  signal_pipe.h  ssocket.c  ssocket.h
bot2-lcm-utils/src/who/: CMakeLists.txt  lcm-who.c  signal_pipe.c  signal_pipe.h
bot2-lcmgl/: CMakeLists.txt  CPPLINT.cfg  README  README.md
bot2-lcmgl/cmake/: bot2-lcmgl-config.cmake.in  lcmtypes.cmake  pods.cmake
bot2-lcmgl/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake  FindM.cmake
bot2-lcmgl/java/: CMakeLists.txt
bot2-lcmgl/lcmtypes/: bot_lcmgl_data_t.lcm
bot2-lcmgl/python/: CMakeLists.txt
bot2-lcmgl/src/bot_lcmgl_client/: CMakeLists.txt  lcmgl.c  lcmgl.h
bot2-lcmgl/src/bot_lcmgl_render/: CMakeLists.txt  lcmgl_bot_renderer.c  lcmgl_bot_renderer.h  lcmgl_decode.c  lcmgl_decode.h
bot2-lcmgl/src/lcmgl-viewer/: CMakeLists.txt  main.c  udp_util.c  udp_util.h  view_menu.c  view_menu.h
bot2-param/: CMakeLists.txt  CPPLINT.cfg  README  README.md
bot2-param/cmake/: bot2-param-config.cmake.in  lcmtypes.cmake  pods.cmake
bot2-param/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake
bot2-param/lcmtypes/: bot_param_entry_t.lcm  bot_param_request_t.lcm  bot_param_set_t.lcm  bot_param_update_t.lcm
bot2-param/src/param_client/: CMakeLists.txt  misc_utils.h  param_client.h  param_internal.c  param_internal.h  param_util.c  param_util.h
bot2-param/src/param_server/: CMakeLists.txt  lcm_util.c  lcm_util.h  param_server.c  param_tool.c
bot2-param/src/param_tester/: CMakeLists.txt  param_dump.c  param_tester.c
bot2-procman/: CMakeLists.txt  CPPLINT.cfg  README.md
bot2-procman/cmake/: bot2-procman-config.cmake.in  lcmtypes.cmake  pods.cmake
bot2-procman/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake  FindUtil.cmake
bot2-procman/doc/: Doxyfile  DoxygenLayout.xml  footer.html
bot2-procman/doc/content/: comms.md  design.md
bot2-procman/lcmtypes/: bot_procman_command2_t.lcm  bot_procman_deputy_cmd2_t.lcm  bot_procman_deputy_cmd_t.lcm  bot_procman_discovery_t.lcm  bot_procman_info2_t.lcm  bot_procman_info_t.lcm  bot_procman_orders2_t.lcm  bot_procman_orders_t.lcm  bot_procman_printf_t.lcm  bot_procman_sheriff_cmd2_t.lcm  bot_procman_sheriff_cmd_t.lcm
bot2-procman/python/: CMakeLists.txt  bot-procman-sheriff.in  build_prefix.py.in  procman-sheriff.glade
bot2-procman/python/scripts/: bot-procman-sheriff
bot2-procman/src/deputy/: CMakeLists.txt  lcm_util.c  lcm_util.h  procinfo.c  procinfo.h  procman.c  procman.h  procman_deputy.c  signal_pipe.c  signal_pipe.h
bot2-vis/: CMakeLists.txt  CPPLINT.cfg  Makefile  README  README.md  bot-ppmsgz
bot2-vis/cmake/: bot2-vis-config.cmake.in  pods.cmake
bot2-vis/cmake/modules/: CheckLinkerFlag.cmake  FindGLib2.cmake  FindM.cmake  FindOpenGL.cmake
bot2-vis/src/bot_vis/: CMakeLists.txt  batch_gl.c  batch_gl.h  bot_vis.h  console.c  console.h  default_view_handler.c  default_view_handler.h  fbgl_drawing_area.c  fbgl_drawing_area.h  gl_drawing_area.c  gl_drawing_area.h  gl_image_area.c  gl_image_area.h  gl_util.c  gl_util.h  glm.c  glm.h  glm_util.c  glmimg.c  glmimg_jpg.c  glmimg_png.c  glmint.h  gtk_util.c  gtk_util.h  param_widget.c  param_widget.h  rwx.c  rwx.h  scrollplot2d.c  scrollplot2d.h  stock_renderer_grid.c  texture.c  texture.h  tokenize.c  tokenize.h  view.c  view.h  viewer.c  viewer.h  (+2 more)
bot2-vis/src/rwx-viewer/: CMakeLists.txt  main.c  renderer_rwx.c
(+89 files in other folders)
